--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Demo
+  - name: Home
     url: '#about'
     weight: 10
   - name: Posts
@@ -16,12 +16,6 @@ main:
   - name: Talks
     url: '#talks'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
-  - name: Courses
-    url: courses/
-    weight: 60
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 50
