--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,14 +7,14 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Blogs
+    url: '#blogs'
     weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Hot Topics
+    url: '#topics'
     weight: 40
   - name: Contact
     url: '#contact'
