--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: sghello2000@yahoo.com
+email: sghello2000 at yahoo dot com
 # phone: 888 888 88 88
 # address:
 #   street: 450 Serra Mall
