--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 
 # Appearance
 
-theme: ocean
+theme: ocean    # can take custom.toml too
 day_night: true
 font: ''
 font_size: L
@@ -147,7 +147,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
+  google_analytics: 'G-FTE6E9RG12'
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
