--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -79,7 +79,7 @@ highlight_languages:
   - r
   - python
   - latex
-math: false
+math: true  #false for latex math formula
 diagram: false
 privacy_pack: false
 edit_page:
@@ -157,4 +157,4 @@ cms:
   local_backend: false
 icon:
   pack:
-    ai: false
+    ai: true
